edited gitignore & READEME.md
* log & pid unstaged
* READEME 스크립트로 실행하는 부분 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 .idea/
 .gradle/
 build/
+
 sfo.mv.db
 main/resources/application-dev.yml
 main/resources/application-real.yml
-
+*.jar
+*.log
+*.pid
